Fixed overlapping hovertext

--- a/css/map_style.css
+++ b/css/map_style.css
@@ -178,7 +178,7 @@ tr:hover {background-color: #ffb5ae;}
     display:none;
     position:absolute;
     width:auto;
-    margin-top:14%;
+    margin-top:7em;
     padding: 1%;
     margin-left: 3%;
     background-color:#7bb2ff;
